--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
     </div>
         <p>This is content of my website.</p>
         <footer>
-           <p>&copy; 2024 rifkimaulana.com. All right reserved.</p>
+           <p>&copy; 2024 rifkimlna.github.io. All right reserved.</p>
         </footer>
 
     <script src="script.js"></script>
