--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <li>41.	Binary - Biner</li>
             <li>42.	Biometric authentication - otentikasi biometrik</li>
             <li>43.	BIOS (Basic Input/Output System) - BIOS (Sistem Input/Output Dasar)</li>
-            <li>44.	Bit - Bit</li>
+            <li>44.	Bit - Bit(binary digit)</li>
             <li>45.	Bluetooth - Bluetooth</li>
             <li>46.	Bold - Tebal</li>
-            <li>47.	Boot - Boot</li>
+            <li>47.	Boot - Booting</li>
             <li>48.	Border - Batas</li>
             <li>49.	Botnet - botnet</li>
             <li>50.	Breadcrumbs - Navigasi Jejak</li>
@@ -155,7 +155,6 @@
             <li>142.	Document Management System (DMS) - Sistem Manajemen Dokumen (DMS)</li>
             <li>143.	Documentation - Dokumentasi</li>
             <li>144.	DOM (Document Object Model) - DOM (Model Objek Dokumen)</li>
-            <li>145.	Download - Unduh</li>
             <li>145.	Download - Unduh</li>
             <li>146.	Draft - Draf</li>
             <li>147.	Drag - Tarik</li>
@@ -500,7 +499,7 @@
             <li>487.	Web Layout - Tata Letak Web</li>
             <li>488.	Web security - keamanan web</li>
             <li>489.	Web Server - Server Web</li>
-            <li>490.	Widget - Widget</li>
+            <li>490.	Widget - Widget(aplikasi halaman awal)</li>
             <li>491.	Wi-Fi security - keamanan Wi-Fi</li>
             <li>492.	Windows - Jendela</li>
             <li>493.	Wireframe - Kerangka Kawat</li>
